# cbot

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  Makefile  README.md  data  install-pyg.sh  main.py  phase_0_plan.md  pyproject.toml  validation_tokens.json
.zed/: debug.json
bak/: explore.ipynb  wrangle.py
cbot/: arima.py  benchmark_mps.py  calculate_weth_prices.py  chickenpox.py  demeter-fetch-uscd-weth-config.toml  explore.ipynb  filter_and_decode_weth_swaps.py  filter_v3_swaps.py  graph.py  ingest-arbitrum.py  ingest-uniswap-arbitrum-coingecko.py  ingest.py  pools.py  tgn.py  traffic.py  train_wikipedia.py  validate_prices.ipynb  wrangle.py
notebooks/: arima_baseline_comparison.ipynb  validate_prices.ipynb  validate_volume_bars.ipynb
plans/: TGCN_IMPLEMENTATION.md  data_overview.md  data_validation_analysis.md  futures.md  phase_1.md  phase_1_2_3_plan.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_5_bar_generation_fixes.md  phase_5_outlier_resolution.md  pool_state_features_implementation.md
plans/phase_1/: STABLECOIN_VALIDATION_FINDINGS.md  analyze_stablecoin_prices.py  check_dai_data_coverage.py  check_stablecoin_pools.py  check_zero_prices.py  examine_price_outliers.py  validate_correlation.py
prompts/: 2025-10-01-grok-design-debate.md
src/: arima.py  baseline_xgboost.py  build_volume_bars.py  calculate_usdc_prices.py  calculate_weth_prices.py  decode_swaps.py  dex_contagion_trader.py  evaluate_embeddings.py  filter_and_decode_swaps.py  generate_embeddings.py  generate_embeddings_edge.py  generate_pool_bars.py  generate_usdc_bars.py  ingest-uniswap-arbitrum.py  ingest_swaps.py  label_triple_barrier.py  ldr_tgn_eval.py  ldr_tgn_trader.py  main.rs  make_stationary.py  modal_train.py  pools_to_tokens.py  probe_embeddings.py  stationarity_prep.py  train_arima_models.py  train_baseline_arima.py  training_data_validation.py
