[project]
name = "cbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "dotenv>=0.9.9",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "requests>=2.32.5",
    "web3>=7.13.0",
    "click>=8.1.7",
]

[dependency-groups]
dev = ["mypy>=1.17.1", "ruff>=0.12.10", "types-requests>=2.32.4.20250809"]

[tool.ruff]
# Set target Python version (match your project’s Python version, e.g., 3.11)
target-version = "py311"
# Set line length (same as Black’s default)
line-length = 88
indent-width = 4
# Include commonly ignored directories
# select = ["E", "F", "W", "I", "N", "D"] # Example: pycodestyle, pyflakes, warnings, imports, naming, docstrings

exclude = [
    ".venv",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable all rules for strict linting
select = ["ALL"]
# Optionally ignore specific rules if they’re too strict for your project
ignore = [
    "S101", # Allow using assert
    #     "D203", # Example: Ignore specific docstring rules if needed
    #     "D213", # Example: Ignore conflicting docstring rules
]
# Allow automatic fixing for all fixable rules
fixable = ["ALL"]
# Allow unused variables with underscore prefix
# dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Enforce strict line length
# line-too-long = "E501"

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11" # Or your target Python version
strict = true
# warn_unused_ignores = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
# no_implicit_optional = true
# warn_redundant_casts = true
# warn_unused_configs = true
